Entries getters implemented

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Journal</title>
   </head>
   <body>
     <noscript>
